# Penguin-CMU-VLN-Challenge-2026

./: README.md  core_challenge.md  instructions.md  notes.txt
ai_module/src/dummy_vlm/: CMakeLists.txt  package.xml
ai_module/src/dummy_vlm/data/: question.txt
ai_module/src/dummy_vlm/launch/: dummy_vlm.launch
ai_module/src/dummy_vlm/src/: dummyVLM.cpp
docker/: README.md
